--- a/service.yaml
+++ b/service.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: nestjs-app-service
+  name: nestjs-service
 spec:
   selector:
     app: nestjs-app
